# freesteamapi

./: .gitignore  meson.build  steamapi.xml  x86_cross.txt
examples/: freesteamapi.ini
inih/: ini.c
src/: AppList.cc  AppTicket.cc  Apps.cc  Client.cc  Controller.cc  Friends.cc  GameCoordinator.cc  GameServer.cc  GameServerStats.cc  HTMLSurface.cc  HTTP.cc  Inventory.cc  Matchmaking.cc  Music.cc  MusicRemote.cc  Networking.cc  ParentalSettings.cc  RemoteStorage.cc  Screenshots.cc  UGC.cc  User.cc  UserStats.cc  Utils.cc  Video.cc  steam_api.cc  steam_api.h
